# TurboShells

./: .coverage  .env  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .pylintrc  IMGUI_SETUP_MANUAL.md  INSTALLATION_GUIDE.md  KEYBOARD.md  LICENSE  NEXT_SESSION.md  README.md  TODO.md  UI_LAYOUT.md  WINDSURF.md  build_station.py  build_venv.py  build_web.py  coverage.json  debug_container.py  debug_demo_genetics.py  debug_pil_drawing.py  debug_svg.py  debug_svg_colors.py  debug_tkinter_svg.py  demo_visual_genetics.py  demo_visual_genetics_tkinter.py  demo_visual_genetics_working.py  development_report.json  diagnose_race_system.py  diagnose_rendering.py  diagnose_state_constants.py  entities.py  game_state.py  init_config.py  inspect_imgui_bundle.py  inspect_thorpy.py  inspect_thorpy_dir.py  inspect_thorpy_init.py  inspect_thorpy_loop.py  (+39 more)
backups/: backup_registry.json
config/: settings.json  settings.json.bak
core/: __init__.py  audio_manager.py  auto_load_system.py  config.py  data_formats.py  data_migration.py  data_performance.py  data_security.py  data_serialization.py  data_structures.py  data_testing.py  data_validation.py  direct_turtle_renderer.py  entities.py  game_state.py  generic_turtle_svg.py  genetic_pool_manager.py  genetic_svg_mapper.py  graphics_manager.py  logging_config.py  profiler.py  race_track.py  save_protection.py  simulation.py  state_handler.py  svg_pygame_renderer.py  svg_pygame_renderer_direct.py  svg_pygame_renderer_hybrid.py  svg_pygame_renderer_simple.py  svg_pygame_renderer_svglib.py  svg_pygame_renderer_wand.py  svg_tkinter_renderer.py  svg_tkinter_renderer_fixed.py  turtle_svg_cache.py  turtle_svg_generator.py  visual_genetics.py  voting_system.py
dev/: .coverage
docs/: ARCHITECTURE.md  CHANGELOG.md  CHANGELOG_v1.md  CHANGELOG_v2.md  CODING_STANDARDS.md  DEVELOPMENT_WORKFLOW.md  ERRORS.md  GDD.md  GDD_Gameplay.md  GDD_Lite.md  GDD_Technical.md  GDD_UI.md  GDD_Vision.md  Phase_07_Pond_Glade_Environment.md  Phase_08_Advanced_Training_System.md  README.md  SCREENSHOT_GUIDE.md  SDD.md  STYLE_GUIDE.md  SVG_Analysis.md  SVG_Technical_Specification.md  TODO.md  TurboShells Deep Dive Audit and Strategic Development Plan.md  UI_LAYOUT.md  data_flow_analysis.md  data_gap_analysis.md  data_preservation_requirements.md  turtle_data_audit.md
genetics/: gene_definitions.py  gene_generator.py  mutation.py
logs/: quality_report_20251123_113124.json  quality_report_20251123_113158.json  quality_report_20251123_115504.json  quality_setup_report.md
managers/: breeding_manager.py  race_manager.py  roster_manager.py  save_manager.py  settings_manager.py  shop_manager.py
reports/: test_report_1763927237.json  test_report_1763927328.json  test_report_1763927407.json  test_report_1763927506.json
saves/: test_save.json
scripts/: auto_fix_system.py  cicd_setup.py  coverage_analysis.py  dev_automation.py  enhanced_pre_commit.py  git_hooks.py  local_ci.py  pre_commit_integration.py  test_persistence.py  windows_commit_msg.py  windows_pre_commit.py
src/: main.py  settings.py
templates/: manager_template.py  test_template.py
tests/: README.md  TEST_ORGANIZATION.md  comprehensive_report.json  comprehensive_test_runner.py  conftest.py  integration_test_suite.py  mock_data_generator.py  performance_test_suite.py  pytest.ini  pytest_runner.py  run_all_tests.py  run_organized_tests.py  run_src_mirrored_tests.py  run_tests.py  test_api_roster.py  test_config_system.py  test_core_entities.py  test_core_mechanics.py  test_data_structures.py  test_error_handling.py  test_game_systems.py  test_genetics_integration.py  test_genetics_performance.py  test_integration_workflows.py  test_main_game.py  test_monitoring_system.py  test_performance.py  test_performance_optimization.py  test_persistence_layer.py  test_race_engine.py  test_turtle_data_preservation.py  test_ui_centered_settings.py  test_ui_components.py  test_ui_final_layout.py  test_ui_menu_changes.py  test_ui_settings.py  test_ui_settings_button.py  test_visual_genetics.py  test_visual_genetics_integration.py  test_voting_influence.py  (+4 more)
tools/: demo_visual_genetics_tkinter.py
turboshells-core/: Cargo.toml  README.md  cargo_errors.txt
turboshells-core/src/: lib.rs  types.rs
turboshells-core/src/genetics/: genes.rs  inheritance.rs  mod.rs  mutation.rs
turboshells-core/src/simulation/: mod.rs  race.rs  terrain.rs  turtle.rs
ui/: breeding_view.py  components.py  layout.py  main_menu_view.py  menu_view.py  race_view.py  renderer.py  roster_view.py  (+6 more)
(+367 files in other folders)
