[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboshells"
version = "2.4.0"
description = "A turtle racing and breeding game with genetics simulation"
authors = [{name = "TurboShells Dev"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame-ce>=2.5",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "loguru>=0.7.3",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "pylint>=3.0.0", 
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "coverage>=7.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "pre-commit>=3.0.0",
    "bandit>=1.7.0",
    "flake8>=6.0.0",
    "memory-profiler>=0.61.0",
    "line-profiler>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring (will be handled separately)
    "R0903",  # too-few-public-methods (common in game classes)
    "C0103",  # invalid-name (game variables often use short names)
]

[tool.pylint.format]
max-line-length = "88"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=70",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "build/*",
    "dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]
